# developer_artifacts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  dependencies.yml
config/: logging.conf
docs/: conf.py  index.rst
docs/guides/: deployment.rst  development.rst  getting_started.rst  llm_prompt_template.rst  testing.rst
src/: config.py  types.py
src/core/: logging.py
